samples/_failures_safe/1761473138_862a09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76840b02.c: In function ‘handle_writing_state’:
./samples/SAFE/__tmp_76840b02.c:150:25: error: ‘EVENT’ undeclared (first use in this function)
  150 |     } else if (event == EVENT
      |                         ^~~~~
./samples/SAFE/__tmp_76840b02.c:150:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_76840b02.c:150:30: error: expected ‘)’ at end of input
  150 |     } else if (event == EVENT
      |               ~              ^
      |                              )
./samples/SAFE/__tmp_76840b02.c:150:5: error: expected declaration or statement at end of input
  150 |     } else if (event == EVENT
      |     ^
